[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
overflow-checks = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
itertools = "0.13.0"
lazy_static = "1.5.0"
md-5 = "0.10.6"
num-integer = "0.1.46"
num-rational = "0.4.2"
num-traits = "0.2.19"
ordered-float = "4.2.2"
rayon = "1.10.0"