[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
overflow-checks = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
ansi_term = "0.12.1"
anyhow = "1.0.86"
arrayvec = "0.7.6"
itertools = "0.13.0"
memchr = "2.7.4"
nohash-hasher = "0.2.0"
num-integer = "0.1.46"
num-traits = "0.2.19"
ordered-float = "4.5.0"
