[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
overflow-checks = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.12"
ansi_term = "0.12.1"
arrayvec = "0.7.6"
memchr = "2.7.5"
nohash-hasher = "0.2.0"
num-integer = "0.1.46"
num-traits = "0.2.19"
ordered-float = "5.0.0"
